<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_required_eventName" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/column_required_eventDate" />

            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/bottom_DatePicker_AddEventDate"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:srcCompat="@drawable/ic_calendar_black_24dp"
                android:onClick="showDatePickerDialog"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_startTime"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/TimePicker_startTime"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:srcCompat="@drawable/ic_access_time_24dp"
                android:onClick="showTimePickDialog"
                />
            <TextView
                android:id="@+id/textPeriod"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/period"
                android:textSize="14dp"/>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_endTime"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/TimePicker_endTime"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:srcCompat="@drawable/ic_access_time_24dp"
                android:onClick="showTimePickDialog"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/column_category"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:id="@+id/editCategory">

            <RadioButton
                android:id="@+id/radio_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/category_move" />

            <RadioButton
                android:id="@+id/radio_sightseeing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sightseeing" />

            <RadioButton
                android:id="@+id/radio_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_eat" />

            <RadioButton
                android:id="@+id/radio_stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_stay" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_other" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_memo" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_address" />

        </android.support.design.widget.TextInputLayout>

        <!-- ImagePicker起動のためのカメラアイコン -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_a_photo_24dp"
            android:onClick="onClickPhotoIcon"
            />

        <rd.slcs.co.jp.showtabi.view.CardRecyclerView4EventPhotos
            android:id="@+id/CardRecyclerView4Photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></rd.slcs.co.jp.showtabi.view.CardRecyclerView4EventPhotos>
    </LinearLayout>

</LinearLayout>