<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PlanListActivity">



    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">


        <rd.slcs.co.jp.showtabi.view.CardRecyclerView4Plan
            android:id="@+id/CardRecyclerView4Plan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></rd.slcs.co.jp.showtabi.view.CardRecyclerView4Plan>

    </FrameLayout>
</LinearLayout>